force-app/main/default/objects/Reservation__c/fields/Reader__c.field-meta.xml
<CustomField>
    <fullName>Reader__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>