force-app/main/default/objects/Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
                <default>true</default>
                <label>created</label>
            </value>
            <value>
                <fullName>confirmed</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>in progress</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>