force-app/main/default/objects/Reservation__c/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <label>Status Comment</label>
    <type>TextArea</type>
</CustomField>